[package]
name = "rate-limit-queue"
version = "0.1.1"
description = "A rate limited queue"
keywords = ["rate", "limit", "queue"]
authors = ["Paul Loyd <pavelko95@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/loyd/rate-limit-queue"

[dependencies]
delegate = "0.1.3"
